# prozhito-recsys-streamlit

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  check_and_download_data.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  app.py  components.py  config.py  data.py  exceptions.py  log.py
static/: styles.css
